# uuv_simulator_RMK

./: README.md
pid_regulator/: CMakeLists.txt  README.md  package.xml
pid_regulator/cfg/: PidParameters.cfg
pid_regulator/config/: rexrov.yaml
pid_regulator/launch/: rexrov.launch
pid_regulator/src/: pid.cpp  pid.py  pid_dynamic.py  uuv_pid_controller.py
publisher/: utils.py  uuv_data_publisher.py
rmkbot_description/: CMakeLists.txt  package.xml
teleop_tools/: CMakeLists.txt  README.md  package.xml
teleop_tools/launch/: rexrov.launch
teleop_tools/src/: joy_models.py  rexrov_joy_teleop.py
thrusters_controllers/: CMakeLists.txt  package.xml
thrusters_controllers/config/: rexrov.yaml
thrusters_controllers/launch/: rexrov_controller.launch  rexrov_no_pid.launch
thrusters_controllers/src/: thrusters_controller_node.cpp
trusters_controllers/: CMakeLists.txt
trusters_controllers/launch/: rexrov_controller.launch
trusters_controllers/scripts/: float32_to_uuv_msgs.py
uuv_descriptions/launch/: upload_rexrov.launch  upload_rexrov_default.launch  upload_rexrov_default_noisy_pose.launch  upload_rexrov_oberon4.launch  upload_rexrov_oberon7.launch
uuv_descriptions/urdf/: rexrov.gazebo.xacro  rexrov_actuators.xacro  rexrov_base.xacro  rexrov_sensors.xacro
uuv_publisher/: CMakeLists.txt  package.xml
uuv_publisher/launch/: uuv_data_publisher.launch
uuv_publisher/scripts/: uuv_data_publisher.py
uuv_simulator/: package.xml
uuv_teleop/launch/: uuv_teleop.launch
uuv_teleop/scripts/: vehicle_teleop.py
